feat: Add warm UI design, email notifications, project cards, and tests

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,48 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Google Fonts - Inter -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- SEO Meta Tags -->
+  <title>Gantumur Battumur | AI Engineer Portfolio</title>
+  <meta name="description"
+    content="AI Engineer specializing in RAG systems, LLMs, and full-stack development. Chat with my AI assistant to learn about my projects, skills, and experience." />
+  <meta name="keywords" content="AI engineer, RAG, LLM, machine learning, Python, React, FastAPI, portfolio, chatbot" />
+  <meta name="author" content="Gantumur Battumur" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph / Social Media -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Gantumur Battumur | AI Engineer Portfolio" />
+  <meta property="og:description"
+    content="AI Engineer specializing in RAG systems and LLMs. Chat with my AI assistant to learn more!" />
+  <meta property="og:url" content="https://gantumurbattumur.com" />
+  <meta property="og:site_name" content="Gantumur Battumur Portfolio" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Gantumur Battumur | AI Engineer Portfolio" />
+  <meta name="twitter:description"
+    content="AI Engineer specializing in RAG systems and LLMs. Chat with my AI assistant!" />
+
+  <!-- Theme Color -->
+  <meta name="theme-color" content="#3b82f6" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://gantumurbattumur.com" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
